styles/global.css
nav {
    display: flex;
    flex-wrap: wrap;
    padding: 10px;
    gap: 15px;
    border: 4px inset white;
}

nav a {
    display: flex;
    font-size: 15px;
    text-decoration: none;
    color: #af6e31;
    transition: color 1s ease;
    align-items: center;
}

nav a:hover {
    color: orange;
}

nav a img {
    width: 32px;
    height: 32px;
}

body {
    border: 4px outset #ffffff;
}

img {
    display: block;
}

* {
    background: black;
    color: white;
    box-sizing: border-box;
    margin: 0;
}

